--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "firebase": "^10.4.0",
+    "jwt-decode": "^3.1.2",
     "localforage": "^1.10.0",
     "lucide-react": "^0.279.0",
     "match-sorter": "^6.3.1",
@@ -26,7 +27,8 @@
     "react-router-dom": "^6.16.0",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "universal-cookie": "^6.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.6.3",
